avoid double scroll bar with scroll by column

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -552,7 +552,7 @@ div.ms-Tooltip-content p.ms-Tooltip-subtext a {
 }
 
 .feedback-board {
-  @apply w-full h-[calc(100vh-92px)] grid;
+  @apply w-full grid flex-1 min-h-0;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
